2-full-stack-deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: altair
  labels:
    name: altair
spec:
  rules:
  - host: db-ui.balaji.ml
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongo-express
            port: 
              number: 80
  - host: frontend.balaji.ml
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 80
